crates/oxyde-sql/tests/snapshots/golden_ddl__check_ops__mysql.snap
---
source: crates/oxyde-sql/tests/golden_ddl.rs
expression: sql
---
ALTER TABLE users ADD CONSTRAINT chk_users_age CHECK (age >= 18);

ALTER TABLE users DROP CHECK chk_users_old
